Fix the alignment of login/sign-up buttons

--- a/resources/assets/css/outer/outer.less
+++ b/resources/assets/css/outer/outer.less
@@ -88,7 +88,6 @@
     .login-link.btn {
       width: 110px;
       height: 40px;
-      margin: 15px;
 
       border-radius: 20px;
     }
